--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,8 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" href="./icon.svg" type="image/svg+xml" />
+
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
